--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       - name: delete-task
         env:
           - name: CONNECTION_STRING
-            value: "Driver={ODBC Driver 17 for SQL Server};Server=tcp:devopsinsiderssrv.database.windows.net,1433;Database=todoapp;Uid=devopsadmin;Pwd=P@ssw01rd@123;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
-        image: devopsinsiders/delete-task
+            value: "Driver={ODBC Driver 17 for SQL Server};Server=tcp:aks-db.database.windows.net,1433;Database=todoappDB;Uid=devopsinsider;Pwd=shivesh@1234;Encrypt=yes;TrustServerCertificate=no;Connection Timeout=30;"
+        image: shivesh183/delete-task
         ports:
         - containerPort: 8000
